app/src/main/java/com/example/concerttickets/services/error/Exceptions.kt
package com.example.concerttickets.services.error

class NoInternetException: Exception()

class ItemNotFoundException: Exception()

class UnknownException: Exception()

class UserNotFoundException: Exception()

class AccessTokenRequiredException: Exception()

class EmptyNameException: Exception()

class BadAccessTokenException: Exception()

class UnknownErrorException: Exception()